--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site</title>
+    <title>x</title>
 </head>
 <body>
     <main>
@@ -12,7 +12,7 @@
         </header>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia aliquam blanditiis molestiae, earum nostrum sed iste odit ad esse porro? Quaerat nesciunt molestias ut voluptatibus numquam, dolores modi aut placeat?</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
